<resources>
    <string name="app_name">MadarsoftTask_saif</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_user_info">Insert User Info</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="show_users">Show Users</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="years">Years</string>
    <string name="user_saved">User Saved</string>
    <string name="users_list">Users list</string>

    <string name="age_not_valid">Age not valid</string>
    <string name="gender_not_valid">Gender not valid</string>
    <string name="job_title_not_valid">Job Title not valid</string>
    <string name="username_not_valid">User Name not valid</string>




</resources>