<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.saif.madarsofttask_saif.domain.core.enums.Gender" />

        <variable
            name="viewModel"
            type="com.saif.madarsofttask_saif.presentation.ui.users.insertUser.InsertUserViewModel" />

        <variable
            name="clicker"
            type="com.saif.madarsofttask_saif.presentation.ui.users.insertUser.InsertUserFragment.InsertUserClicker" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guildline_margin_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guildline_margin_end" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/insert_user_info"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_username"
            style="@style/MainTextInputLayoutStyle"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextRegisterStyle"
                android:inputType="textPersonName"
                android:text="@={viewModel.userRequest.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_age"
            style="@style/MainTextInputLayoutStyle"
            android:hint="@string/age"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/etl_username">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextRegisterStyle"
                android:inputType="number"
                android:text="@={viewModel.userRequest.age}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_job_title"
            style="@style/MainTextInputLayoutStyle"
            android:hint="@string/job_title"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/etl_age">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextRegisterStyle"
                android:inputType="text"
                android:text="@={viewModel.userRequest.jobTitle}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_gender"
            style="@style/MainTextInputLayoutStyle"
            android:hint="@string/gender"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/etl_job_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextRegisterStyle"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:focusable="false"
                android:inputType="none"
                android:onClick="@{()->clicker.onGenderClick()}"
                genderText="@{viewModel.userRequest.gender}" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:onClick="@{()->clicker.onInsertClick()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_show_users"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/etl_gender"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/btn_show_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:onClick="@{()->clicker.onShowUsersClick()}"
            android:text="@string/show_users"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/btn_done"
            app:layout_constraintTop_toTopOf="@+id/btn_done"
            app:layout_constraintVertical_bias="1" />

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>